infra/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  person-service
  namespace: default
  labels:
    app:  person-service
    version: v1
spec:
  selector:
    matchLabels:
      app: person-service
  replicas: 1
  template:
    metadata:
      labels:
        app:  person-service
    spec:
      containers:
      - name:  person-service
        image:  person:latest
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 200Mi
        imagePullPolicy: Never
