infra/service.yml
apiVersion: v1
kind: Service
metadata:
  name: person-service
  labels:
    app: person-service
    service: person-service
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: person-service
