infra/virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: person
spec:
  hosts:
  - "*"
  gateways:
    - person-gateway
  http:
  - match: 
    - uri: 
        prefix: /person-api
    route:
    - destination: 
        host: person-service
        port: 
          number: 8080
